# utilities.mc

./: .gitignore  .gitmodules  README.md  seed-map-rust-build-guide.md
.github/workflows/: deploy.yml
app/: Cargo.toml
app/src/: cache.rs  enchant_web.rs  lib.rs  portal_web.rs  tiles.rs
app/tests/: cache.rs  tiles.rs
crates/enchant/: Cargo.toml  build.rs
crates/enchant/data/: enchantments-1.16.5.json  enchantments-1.21.3.json
crates/enchant/examples/: anvil.rs  predict.rs
crates/enchant/src/: anvil.rs  data.rs  enchant.rs  java_random.rs  lib.rs  optimize.rs  table.rs
crates/enchant/tests/: anvil.rs  enchant.rs  java_random.rs  optimize.rs  table.rs
crates/enchant/tests/vectors/: java_random.rs
crates/portal/: Cargo.toml
crates/portal/examples/: convert.rs
crates/portal/src/: coords.rs  lib.rs  linking.rs
crates/portal/tests/: coords.rs  linking.rs
engine/: build.sh  shim.c
scripts/: build-all.sh  gen-enchant-1.16.5.py  gen-java-vectors.sh  smoke.mjs  validate.mjs
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: spike.html  twomodule.html
web/src/: enchant-ui.js  engine.js  fly.js  main.js  map2d.js  map3d.js  portal-ui.js  structures.js  style.css  terrain.js  versions.js
web/test/: fly.test.mjs  map2d.test.mjs  structures.test.mjs
